add more styles...

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,20 +2,60 @@
   margin-top: 83px;
   text-align: center;
   .title {
+    letter-spacing: 0.01rem;
+    // -webkit-text-size-adjust: 100%;
   }
   .narration {
+    letter-spacing: 0.01rem;
+    margin-top: 0.5rem;
   }
   &__features {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    width: fit-content;
+    margin: auto;
+    margin-top: 2rem;
   }
   &__list-item {
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-right: 2rem;
+    &:nth-last-child(1) {
+      margin-right: 0;
+    }
   }
   &__item-text {
     margin-left: 0.5rem;
+    font-weight: 200;
+  }
+}
+
+.button-container {
+  margin: auto;
+  margin-top: 2.5rem;
+}
+#book-meeting {
+  font-size: 1.125rem;
+  // padding: 1rem 2rem;
+  padding: 0.9rem 1.2rem;
+}
+
+.stories-look {
+  position: relative;
+  // margin-top: 90px;
+  align-content: center;
+  overflow-x: hidden;
+  display: flex;
+  margin: 125px auto 0 auto;
+  justify-content: center;
+  &__example {
+    min-width: 1471px;
+    // position: absolute;
+    // display: block;
+    // left: 0;
+    // right: 0;
+    // margin: auto;
   }
 }
