--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,39 +1,143 @@
-@import "./mixins.scss";
+@import "./assets/reset.css";
+@import "./assets/variables.scss";
+@import "./assets/mixins.scss";
 
-@font-face {
-  font-family: "TTCommons";
-  src: url("../../static/fonts/TTCommons-Regular.woff") format("woff"),
-    url("../../static/fonts/TTCommons-Regular.woff2") format("woff2"),
-    url("../../static/fonts/TTCommons-Regular.eot") format("opentype"),
-    url("../../static/fonts/TTCommons-Regular.ttf") format("truetype");
-  font-weight: 400;
-}
-@font-face {
-  font-family: "TTCommons";
-  src: url("../../static/fonts/TTCommons-Bold.woff") format("woff"),
-    url("../../static/fonts/TTCommons-Bold.woff2") format("woff2"),
-    url("../../static/fonts/TTCommons-Bold.eot") format("opentype"),
-    url("../../static/fonts/TTCommons-Bold.ttf") format("truetype");
-  font-weight: 800;
-}
-
+//layout style
 * {
-  font-family: "TTCommons", Arial, sans-serif;
+  // font-family: "TTCommons", Arial, sans-serif;
+  font-family: $font-sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  color: $color-text-primary;
+  text-decoration: none;
+  box-sizing: border-box;
 }
 
+//native elements
+
+header {
+  height: 70px;
+  top: 0;
+  // display: flex;
+  align-content: center;
+  position: sticky;
+  background-color: white;
+  z-index: 100;
+}
+
+//custom elements
 .title {
   font-size: 2.625rem;
   line-height: 2.75rem;
 }
 
+.narration {
+  font-size: 1.125rem;
+  line-height: 1.375rem;
+}
+
 .Navbar {
+  padding: 0 30px;
+  margin: 0 3.5px;
+  box-sizing: border-box;
+  width: 100%;
+  height: inherit;
   display: flex;
-  flex-direction: row;
+  position: fixed;
   justify-content: space-between;
+  // max-width: 1680px;
+  // margin-left: auto;
+  // margin-right: auto;
+  // display: -webkit-box;
+  // display: -ms-flexbox;
+  // display: flex;
+  // -webkit-box-orient: horizontal;
+  // -webkit-box-direction: normal;
+  // -ms-flex-direction: row;
+  // flex-direction: row;
+  // height: 70px;
+  // -webkit-box-align: center;
+  // -ms-flex-align: center;
+  // align-items: center;
+  // padding-left: 1rem;
+  // padding-right: 1rem;
+
+  &__list {
+    width: 100%;
+    display: flex;
+    direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__navigation {
+    height: 100%;
+  }
   &__navigation,
-  &__right {
+  &__controls {
     display: flex;
     flex-direction: row;
     align-items: center;
   }
+  &__brand-name {
+    display: block;
+    margin-right: 100px;
+    align-self: center;
+    a {
+      display: flex;
+      width: 100%;
+      height: fit-content;
+    }
+  }
+
+  &__item {
+    text-decoration: none;
+    display: flex;
+    align-content: center;
+    font-size: 18px;
+    margin-left: 1rem;
+    margin-right: 0.75rem;
+    color: $color-text-primary;
+  }
+
+  &__dropdown {
+    white-space: nowrap;
+    display: inline-block;
+    cursor: pointer;
+    &::after {
+      display: inline-block;
+      width: 6.2px;
+      height: 6.2px;
+      content: "";
+
+      border-right: 1px solid $color-primary;
+      border-bottom: 1px solid $color-primary;
+      border-left: none;
+      transform: rotate(45deg);
+      margin-left: 8px;
+      vertical-align: middle;
+      box-sizing: border-box;
+    }
+  }
+
+  &__auth {
+    display: flex;
+    flex-direction: row;
+    margin-right: 2rem;
+    white-space: nowrap;
+    &-login {
+      margin-left: 0.5rem;
+      &:hover {
+        color: $color-text-primary__active;
+      }
+    }
+  }
+
+  &__trynow {
+    font-size: 1rem;
+    margin-right: 1rem;
+  }
+}
+
+.button-filled {
+  @include button-filled;
 }
