--- a/src/styles/assets/variables.scss
+++ b/src/styles/assets/variables.scss
@@ -4,6 +4,9 @@ $color-bg-light: #fff;
 $color-text-primary: #000;
 $color-text-primary__active: #0c62f3;
 $color-text-accent: #0c62f3;
+
+$lightgray: #f0f0f0;
+
 $color-btn-text: #0c62f3;
 $color-btn-bg: #fff;
 $color-btn-border: #0c62f3;
