--- a/src/styles/assets/mixins.scss
+++ b/src/styles/assets/mixins.scss
@@ -15,3 +15,10 @@
   box-sizing: border-box;
   white-space: nowrap;
 }
+
+@mixin auto-indent {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
