--- a/src/styles/assets/variables.scss
+++ b/src/styles/assets/variables.scss
@@ -6,6 +6,7 @@ $color-text-primary__active: #0c62f3;
 $color-text-accent: #0c62f3;
 
 $lightgray: #f0f0f0;
+$darkgray: #858585;
 
 $color-btn-text: #0c62f3;
 $color-btn-bg: #fff;
