--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,7 @@
 @import "./assets/variables.scss";
 @import "./assets/mixins.scss";
 .get-started {
-  margin-top: 5.5rem;
+  margin-top: 83px;
   text-align: center;
   .title {
     letter-spacing: 0.01rem;
@@ -71,7 +71,11 @@
 
 .marketing-slider {
   height: 80vh;
-  background-color: $color-primary;
+  // background-color: $color-primary;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  background-image: url("../../static/images/placeholder.jpeg");
 }
 
 .features {
@@ -128,6 +132,9 @@
           margin-bottom: 1.5rem;
         }
       }
+      &__img-container {
+        width: 60%;
+      }
     }
 
     .feature_reversed {
@@ -170,6 +177,7 @@
 
     .stat-container {
       width: 25%;
+      padding-right: 1rem;
       .title {
         margin-bottom: 7px;
       }
@@ -180,16 +188,67 @@
       .separator {
         width: 100%;
         height: 1px;
-        // overflow: visible;
-        // position: relative;
+        overflow: visible;
+        position: relative;
         background-color: hsla(0, 0%, 100%, 0.2);
+        &::after {
+          content: "";
+          position: absolute;
+          left: 0;
+          top: -2px;
+          height: 3px;
+          width: 80px;
+          background-color: #000;
+        }
       }
     }
   }
 }
 
 .reviews {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  max-width: 1680px;
+
   overflow: hidden;
   background: linear-gradient(#0c62f3, #0c62f3 153px, $lightgray 0, $lightgray);
   text-align: left;
+  .subtitle3 {
+    color: #fff;
+  }
+  &__top-panel {
+    .subtitle3 {
+      font-weight: 400;
+      margin-bottom: 1.5rem;
+    }
+  }
+}
+
+.awards {
+  background-color: #fff;
+  padding: 45px 0;
+  display: flex;
+  justify-content: center;
+
+  &__container {
+    max-width: 1240px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+  }
+  .award {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    &__stars {
+      margin-top: 2rem;
+    }
+    &__label {
+      font-size: 1.5rem;
+      color: $darkgray;
+      margin-top: 1.5rem;
+    }
+  }
 }
