--- a/src/styles/assets/mixins.scss
+++ b/src/styles/assets/mixins.scss
@@ -14,6 +14,14 @@
   padding: 0.45rem 1rem;
   box-sizing: border-box;
   white-space: nowrap;
+  &:hover {
+  }
+}
+
+@mixin color-and-rounding {
+  background-color: #0c62f3;
+  box-shadow: 0 2px 7px rgba(0, 0, 0, 0.05), 0 20px 36px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
 }
 
 @mixin auto-indent {
@@ -21,4 +29,13 @@
   margin-right: auto;
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+@mixin placeholder {
+  height: 60vh;
+  background-image: url("../../static/images/placeholder.jpeg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  background-blend-mode: multiply;
 }
