--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @import "./assets/variables.scss";
 @import "./assets/mixins.scss";
+
 .get-started {
   margin-top: 83px;
   text-align: center;
@@ -62,7 +63,19 @@
   }
 }
 
+.partnerships {
+  padding: 70px 0;
+  height: fit-content;
+  box-sizing: border-box;
+  background-repeat: repeat;
+  .slider {
+    height: 65px;
+  }
+}
+
 .marketing-goals {
+  margin: auto;
+  @include auto-indent;
   max-width: 1280px;
   &__subtitle {
     margin-bottom: 16px;
@@ -70,12 +83,6 @@
 }
 
 .marketing-slider {
-  height: 80vh;
-  // background-color: $color-primary;
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
-  background-image: url("../../static/images/placeholder.jpeg");
 }
 
 .features {
@@ -209,11 +216,17 @@
   margin: auto;
   display: flex;
   flex-direction: column;
-  max-width: 1680px;
-
+  width: 100%;
   overflow: hidden;
   background: linear-gradient(#0c62f3, #0c62f3 153px, $lightgray 0, $lightgray);
+  background-color: $lightgray;
+
   text-align: left;
+
+  &__container {
+    // max-width: 1680px;
+    background-color: $lightgray;
+  }
   .subtitle3 {
     color: #fff;
   }
@@ -249,6 +262,156 @@
       font-size: 1.5rem;
       color: $darkgray;
       margin-top: 1.5rem;
+    }
+  }
+}
+
+.media-about-us {
+  background-color: $lightgray;
+}
+
+.how-it-works {
+  margin-top: 108px;
+  display: flex;
+  justify-content: center;
+  &__container {
+    max-width: 1280px;
+
+    .subtitle {
+      margin-bottom: 55px;
+    }
+
+    .steps {
+      display: flex;
+      @include auto-indent;
+
+      &__step-campaign {
+        width: calc(100% / 3);
+        padding-right: 15px;
+        margin-bottom: 4.5rem;
+        svg {
+          margin-bottom: 30px;
+        }
+        .subtitle3 {
+          position: relative;
+          font-weight: 800;
+          margin-bottom: 15px;
+          font-size: 18px;
+          &::before {
+            content: "";
+            display: block;
+            position: relative;
+            width: 100%;
+            height: 1px;
+            top: 11.3px;
+            background-color: #000;
+            z-index: -1;
+          }
+          span {
+            padding-right: 1rem;
+            background-color: #fff;
+
+            display: inline-block;
+            z-index: -1;
+            &::after {
+              content: "";
+              display: flex;
+              position: absolute;
+              right: 0;
+              top: 8px;
+              width: 5px;
+              height: 8px;
+
+              background-image: url("../../static/images/arrow.svg");
+            }
+          }
+        }
+        .narration {
+          font-size: 16px;
+        }
+        &:nth-last-child(1) {
+          padding: 0;
+          .subtitle3 {
+            &::before {
+              content: none;
+            }
+            span {
+              &::after {
+                content: none;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.get-demo {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+
+  &__container {
+    padding: 70px 100px;
+    @include color-and-rounding;
+    display: flex;
+    width: 1280px;
+    p,
+    input,
+    h2 {
+      color: #fff;
+    }
+
+    .subtitle,
+    .narration {
+      margin-bottom: 16px;
+    }
+  }
+
+  &__description {
+    max-width: 350px;
+  }
+
+  &__form-container {
+    width: 100%;
+
+    .form {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+      &__input {
+        max-width: 380px;
+        color: #fff;
+        background-color: transparent;
+        font-size: 1.25rem;
+        padding-left: 19px;
+        display: block;
+        width: 100%;
+        overflow: visible;
+        // min-height: calc(1.25em + 1.5rem + 4px);
+        // padding: 0.75rem 1.125rem;
+        // font-size: 1.125rem;
+        // font-weight: 400;
+        // line-height: 1.25;
+        // color: #000;
+        // background-color: #fff;
+        // background-clip: padding-box;
+        border: 2px solid #fff;
+        // -webkit-appearance: none;
+        // -moz-appearance: none;
+        // appearance: none;
+        border-radius: 0.4375rem;
+        &::placeholder {
+          color: #fff;
+        }
+      }
+      &__button {
+        background-color: #fff;
+        color: $color-primary;
+        margin-left: 1rem;
+        font-size: 1.25rem;
+      }
     }
   }
 }
