--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -351,6 +351,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  margin-bottom: 72px;
 
   &__container {
     padding: 70px 100px;
